last records get method
