# api/swagger/swagger.yaml
@@ -51,6 +51,25 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+
+  /last_updated_records/:
+    x-swagger-router-controller: records
+    get:
+      description: get for last 5 updated records (scientificName and Id)
+      tags:
+        - record
+      operationId: getMostRecentRecordsUpdated
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Record"
+        # responses may fall through to errors
+        "400":
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   
   /record/{id}:
     x-swagger-router-controller: records
